--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -14,7 +14,8 @@
         font-size: 50px;
 
         @include mobile{
-            font-size: 20px;
+            font-size: 30px;
+            overflow: hidden;
         }
     }
     .container{
@@ -40,7 +41,7 @@
             transition: all 1s ease;
 
             @include mobile{
-                height: 180px;
+                height: 190px;
                 margin: 10px 0;
             }
 
@@ -52,7 +53,7 @@
                 @include mobile{
                     width: 250px;
                     height: 180px;
-                    margin: 1px;
+                    margin: 2px;
                 }
             }
 
@@ -86,12 +87,13 @@
             }
             .center{
                 padding: 20px;
-                margin: 40px 0;
+                margin: 30px 0;
                 border-radius: 10px;
                 background-color: pink;
 
                 @include mobile{
-                    font-size: 12px;
+                    font-size: 14px;
+                    margin: 3;
                     padding: 0px;
                 }
             }
