--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -40,6 +40,7 @@
          flex-direction: column;
          align-items: center;
          justify-content: space-around;
+
          
          
 
@@ -52,6 +53,7 @@
             @include mobile{
                width: 200px;
                height: 20px;
+               border-radius: 10px;
             }
          }
 
@@ -63,6 +65,7 @@
             @include mobile{
                width: 200px;
                height: 100px;
+               border-radius: 10px;
             }
          }
 
