--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -48,6 +48,7 @@
             width: 300px;
             height: 30px;
             font-size: 14px; 
+            border-radius: 10px;
             
 
             @include mobile{
@@ -61,6 +62,7 @@
             width: 300px;
             height: 300px;
             font-size:14px;
+            border-radius: 10px;
 
             @include mobile{
                width: 200px;
