--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -4,7 +4,7 @@
 .topbar{
     width: 100%;
     height: 70px;
-    background-color: white;
+    background-color: #FCFFE7;
     color: $mainColor;
     position: fixed;
     top: 0;
