--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -2,8 +2,9 @@
  
  
  .contact{
-    background-color: white;
+    background-color: rgb(186, 215, 233);
     display: flex;
+    color: #FCFFE7;
 
     @include mobile{
       flex-direction: column;
@@ -40,6 +41,7 @@
          flex-direction: column;
          align-items: center;
          justify-content: space-around;
+         border-color: #EB455F;
 
          
          
@@ -49,6 +51,7 @@
             height: 30px;
             font-size: 14px; 
             border-radius: 10px;
+            border-color: #EB455F;
             
 
             @include mobile{
@@ -63,6 +66,7 @@
             height: 300px;
             font-size:14px;
             border-radius: 10px;
+            border-color: #EB455F;
 
             @include mobile{
                width: 200px;
@@ -75,7 +79,7 @@
             width: 150px;
             height: 30px;
             color: whitesmoke;
-            background-color: crimson;
+            background-color: #EB455F;
             border: none;
             border-radius: 10px;
             font-weight: 500;
