--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .portfolio{
-    background-color: white;
+    background-color: #BAD7E9;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,6 +9,7 @@
     h1{
         font-size: 50px;
         margin-bottom: 40px;
+        color: #FCFFE7;
         
         @include mobile{
             font-size: 30px;
@@ -58,12 +59,12 @@
             width: 220px;
             height: 160px;
             border-radius: 20px;
-            border: 1px solid rgb(240, 239, 239);
+            border: 1px solid rgb(235, 69, 95);
             margin: 10px 20px;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: white;
+            background-color: white;
             position: relative;
             transition: 0.5s;
             cursor: pointer;
