--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .testimonials{
-    background-color: white;
+    background-color:  #FCFFE7;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,6 +12,7 @@
 
     h1{
         font-size: 50px;
+        color: #BAD7E9;
 
         @include mobile{
             font-size: 30px;
@@ -34,7 +35,7 @@
             width: 250px;
             height: 70%;
             border-radius: 10px;
-            box-shadow: 0px 0px 15px -8px black;
+            box-shadow: 0px 0px 15px -8px #2B3467;
             display: flex;
             flex-direction: column;
             padding: 20px;
@@ -105,13 +106,14 @@
 
                 h3{
                     margin-bottom: 5px;
+                    color: #2B3467;
 
                     @include mobile{
                         font-size: 14px;
                     }
                 }
                 h4{
-                    color: gray;
+                    color: #BAD7E9;
 
                     @include mobile{
                         font-size: 13px ;
