--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,16 +1,16 @@
 @import "../../global.scss";
 
 .works{
-    background-color: #349c0e;
+    background-color: #2B3467;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
 
     h1{
-        color: aliceblue;
+        color: #FCFFE7;
         font-size: 50px;
-        height: 80vh;
+        height: 85vh;
     
         @include mobile{
             font-size: 35px;
@@ -28,7 +28,6 @@
 
     &.left{
         left: 100px;
-        
         cursor: pointer;
     
     }
@@ -61,7 +60,7 @@
         .item{
             width: 700px;
             height: 100%;
-            background-color: white;
+            background-color: #FCFFE7;
             border-radius: 20px;
             display: flex; 
             align-items: center;
@@ -82,7 +81,7 @@
 
             .leftContainer{
                 width: 90%;
-                height: 70%;
+                height: 90%;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
@@ -127,6 +126,7 @@
 
                 h2{
                     font-size: 20px;
+                    overflow: hidden;
 
                     @include mobile{
                         font-size: 13;
@@ -134,7 +134,9 @@
                     }
                 }
                 p{
+                    
                     font-size: 13px;
+                    overflow: hidden;
 
                     @include mobile{
                         display:  none;
