--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -49,6 +49,7 @@
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
+        color: #FCFFE7;
 
         @include mobile{
             width: 100%;
