--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -121,11 +121,12 @@
                 }
 
                 h1{
-                    font-size: 40px
+                    font-size: 40px;
                 }
 
                 h2{
                     font-size: 20px;
+                    color: #EB455F;
                     overflow: hidden;
 
                     @include mobile{
@@ -137,6 +138,7 @@
                     
                     font-size: 13px;
                     overflow: hidden;
+                    color: #EB455F;
 
                     @include mobile{
                         display:  none;
