--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -37,6 +37,10 @@
             justify-content: center;
             cursor: pointer;
 
+            @include mobile{
+                border-radius: 10px;
+            }
+
             &.active{
                 background-color: $mainColor;
                 color: white;
