--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -84,6 +84,7 @@
                 width: 130px;
                 height: 100px;
                 margin-bottom: 45px;
+                border-radius: 10px;
             }
 
             h3{
