--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -97,6 +97,10 @@
                 height: 100%;
                 object-fit: cover;
                 z-index: 1;
+
+                @include mobile{
+                    border-radius: 10px;
+                }
             }
             &:hover{
                 background-color: $mainColor;
