--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -8,7 +8,8 @@
     cursor: pointer;
 
     @include mobile{
-        margin-right: 20px, 
+        margin-right: 20px;
+        border-radius: 10px; 
     }
 
     &.active{
